--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
-languageCode = "en-us"
-languageLang = "en"
-title = "Homepage"
+languageCode = "cs"
+languageLang = "cs"
+title = "KVT Silesia s.r.o."
 
 # RSS, categories and tags disabled for an easy start
 # See configuration options for more details: 
